--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,10 @@
     <string name="_5">5</string>
     <string name="stage">Stage</string>
 
+    <string name="profile_email">My Email</string>
+    <string name="profile_name">Name</string>
+    <string name="profile_point">My Point</string>
+    <string name="profile_location">My Location</string>
+    <string name="profile_rank">My Rank</string>
 
 </resources>
